add logger verbosity levels
