# core/api-server/api/rest-api/swagger.json
@@ -276,6 +276,59 @@
                 }
             }
         },
+        "/exec/pipelines/list": {
+            "get": {
+                "tags": [
+                    "Execution"
+                ],
+                "summary": "Get current running pipelines",
+                "description": "Returns the current running pipelines data",
+                "responses": {
+                    "200": {
+                        "description": "pipeline data",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "items": {
+                                        "$ref": "#/components/schemas/pipeline"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "jobId Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "Unexpected error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/exec/status/{jobId}": {
             "get": {
                 "tags": [
